# GitFowTest

./: CMakeLists.txt  CMakeSettings.json  README.md  cmake-variants.json
HelloWorld/: CMakeLists.txt  main.cpp
